2004-10-25  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (tagdate): Added some additional tests and FIXCVS
	comments for dealing properly with a 'cvs add' of a file to
	a branch that already exists on the mainline.
	(Problem reported by Renny Barrett <rbarrett@curamsoftware.com>.)

	* sanity.sh (getrlogdate): New shell function.
	(tagdate-{13,14,16}): Use it to avoid 'sleep 60' by using
	the exact 1.1.4.1 timestamp for tagdate-14 and tagdate-16.
	
2004-10-25 Derek Price <derek@ximbiot.com>

	* sanity.sh (depends_on_rsync): Redirect rsync output to /dev/null when
	just testing.

2004-10-23  Mark D. Baushke  <mdb@cvshome.org>

	* socket-client.c (socket_buffer_initialize): Drop obsolete
	arguments to buf_initialize().

2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* client.c (handle_m, handle_e): Winsock is returning
	SOCK_ERRNO == WSAENOTSOCK for select() problems and not
	setting errno. Do not bother with printing an error from a
	select() that is not returning an non-zero errno.
	(Report from Conrad T. Pino <Conrad@Pino.com>.)

2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (proxy): proxycheck depends on rsync, but skip all if
	no rsync is found rather than generate an error return.

2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.am (proxycheck): New test target.
	* sanity.sh: Keep one more level of check.log backup.
	* Makefile.in: Regenerated.

2004-10-22 Derek Price <derek@ximbiot.com>

	* client.c, update.c: Use new MD5 interface.

2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (find_tool): Search /usr/pkg/bin for NetBSD tools
	like rsync.

2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (tagdate): Fix typo.

2004-10-21 Derek Price <derek@ximbiot.com>

	* subr.c: #include vasnprintf.h to avoid compiler warning.

2004-10-21 Derek Price <derek@ximbiot.com>

	* cvs.h (error_use_protocol): Move decl here from lib/error.h so that
	we may use an unforked error.h from GNULIB.
